[gd_scene load_steps=13 format=2]

[ext_resource path="res://swim/Scripts/Juego.gd" type="Script" id=1]
[ext_resource path="res://swim/arrows/Idle_Down.tscn" type="PackedScene" id=2]
[ext_resource path="res://swim/swim-sprite.png" type="Texture" id=3]
[ext_resource path="res://swim/arrows/Idle_Up.tscn" type="PackedScene" id=4]
[ext_resource path="res://swim/arrows/Idle_Left.tscn" type="PackedScene" id=5]
[ext_resource path="res://swim/Aexkon-Font/AEXKON_Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://swim/ballad.mp3" type="AudioStream" id=7]
[ext_resource path="res://swim/arrows/Idle_Right.tscn" type="PackedScene" id=8]
[ext_resource path="res://swim/PlayerSprite.tscn" type="PackedScene" id=9]
[ext_resource path="res://swim/OtohimeSprite.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Juego" type="Node2D"]
scale = Vector2( 0.308788, 0.299576 )
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 512.267, 301.7 )
scale = Vector2( 3.19833, 3.31444 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 320, 180 )

[node name="Puntaje" type="Node2D" parent="."]
position = Vector2( 168, 88 )

[node name="Label" type="Label" parent="Puntaje"]
margin_left = -48.0
margin_top = -40.0
margin_right = 162.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "PUNTAJE:"
align = 1
valign = 1

[node name="Puntaje2" type="Node2D" parent="."]
position = Vector2( 168, 88 )

[node name="Label" type="Label" parent="Puntaje2"]
margin_top = 8.0
margin_right = 112.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "000"
align = 1
valign = 1

[node name="Combo" type="Node2D" parent="."]
position = Vector2( 168, 88 )

[node name="Label" type="Label" parent="Combo"]
margin_left = 264.0
margin_top = -40.0
margin_right = 421.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "COMBO:"
align = 1
valign = 1

[node name="Combo2" type="Node2D" parent="."]
position = Vector2( 168, 88 )

[node name="Label" type="Label" parent="Combo2"]
margin_left = 272.0
margin_right = 416.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Grade" type="Node2D" parent="."]
position = Vector2( 168, 88 )

[node name="Label" type="Label" parent="Grade"]
margin_left = 272.0
margin_top = 136.0
margin_right = 416.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Create" type="Node2D" parent="."]

[node name="Position2D_AL" type="Position2D" parent="Create"]
position = Vector2( 730, 641 )

[node name="Position2D_AU" type="Position2D" parent="Create"]
position = Vector2( 794, 641 )

[node name="Position2D_AD" type="Position2D" parent="Create"]
position = Vector2( 858, 641 )

[node name="Position2D_AR" type="Position2D" parent="Create"]
position = Vector2( 922, 641 )

[node name="Idle_Left" parent="." instance=ExtResource( 5 )]
position = Vector2( 730, 64 )

[node name="Idle_Down" parent="." instance=ExtResource( 2 )]
position = Vector2( 858, 64 )

[node name="Idle_Up" parent="." instance=ExtResource( 4 )]
position = Vector2( 794, 64 )

[node name="Idle_Right" parent="." instance=ExtResource( 8 )]
position = Vector2( 922, 64 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
autoplay = true

[node name="KinematicBody2D" parent="." instance=ExtResource( 9 )]

[node name="KinematicBody2D2" parent="." instance=ExtResource( 10 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
